# Dodger

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: constants.h  enemy.h  player.h  types.h  util.h
src/: enemy.c  main.c  player.c  util.c
